# thesis-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debugger.pro  disassemblymodel.cpp  disassemblymodel.h  flagview.cpp  flagview.h  flagwidget.cpp  flagwidget.h  instructionview.cpp  instructionview.h  main.cpp  mainwindow.cpp  mainwindow.h  mcustate.cpp  mcustate.h  memorymodel.cpp  memorymodel.h  memoryview.cpp  memoryview.h  registermodel.cpp  registermodel.h  registerview.cpp  registerview.h
src/: disassemblymodel.cpp  disassemblymodel.h  flagview.h  instructionview.cpp  mainwindow.cpp  mainwindow.h  mcustate.cpp  mcustate.h  memorymodel.cpp  memoryview.h  playerview.cpp  playerview.hpp  registermodel.cpp  registermodel.h  registerview.cpp  registerview.h  serialconsole.cpp  serialconsole.hpp
